test/spec_vectors/ref_eq/fail/module_3.wat
(module (func (export "eq") (param $r (ref func)) (result i32) (ref.eq (local.get $r) (local.get $r))))